# ULB.Projet3

./: .editorconfig  .gdignore  .gitattributes  .gitignore  bezier.py  default_bus_layout.tres  icon.svg.import  noise_native.gdextension  noise_native.gdextension.uid  project.godot  utils.tscn
.godot/: global_script_class_cache.cfg
.godot/editor/: create_recent.Node  editor_layout.cfg  executioner.tscn-folding-8eee66b38b5f12969778f1f6cffabc4e.cfg  filesystem_cache10  filesystem_update4  gui_loading_world.tscn-folding-958aa47c7aa3d86131dd83e262f34814.cfg  gui_main_menu.tscn-editstate-e0a17b7bdfaeb9a4f5c0a26ec7594880.cfg  gui_main_menu.tscn-folding-e0a17b7bdfaeb9a4f5c0a26ec7594880.cfg  intermediate_stage.tscn-editstate-3b916507e6d434bfab5639912c37a5fa.cfg  intermediate_stage.tscn-folding-3b916507e6d434bfab5639912c37a5fa.cfg  project_metadata.cfg  quick_open_dialog_cache.cfg  recent_dirs  script_editor_cache.cfg  terrain_world.tscn-editstate-2da3895d9b8b03805af72eb4017a0d86.cfg  (+1 more)
docs/: 2026_Sciences (1).pptx  2026_Sciences.pptx  poster_mise_en_pratique.pptx
noise_native/: Cargo.toml  rustfmt.toml
noise_native/src/: common.rs  lib.rs  octave.rs  perlin.rs  simplex.rs
procedural-terrain-generation/: .gitignore  CLAUDE.md  chunk_mesh.tscn  install_sounds.gd  install_sounds.gd.uid  install_sounds.tscn  project.godot  single_chunk_terrain.gd  single_chunk_terrain.gd.uid  terrain_constants.gd.uid  terrain_manager.gd  terrain_world.tscn
scripts/: intermediate_stage.gd.uid
tools/: layers.png.import  perlin_vectors.py  terrain_viz.py  topo_contour.py
(+582 files in other folders)
